--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ height: 45vw;
     
 
 
-  <img id= "alice" src="aliceinwonderland.png">
+  <img id= "alice" src="Aliceinwonderland.png">
   <img id="bella" src="bnb.png">
   <img id="mick" src="disney.png">
    <img id="goofy" src="goofy.png">
